--- a/3d/torus_knot/torus_knot.html
+++ b/3d/torus_knot/torus_knot.html
@@ -371,7 +371,7 @@
 
   function chooseFromHash( mesh ) {
 
-    const selectedGeometry = window.location.hash.substring( 1 ) || 'TorusKnotGeometry';
+    const selectedGeometry = window.location.hash.substring( 1 ) || 'PlaneGeometry';
 
     if ( guis[ selectedGeometry ] !== undefined ) {
 
@@ -392,6 +392,22 @@
   }
 
   const gui = new dat.GUI();
+  let showWireframe = false;
+
+  const wireframeController = gui.add( { showWireframe: false }, 'showWireframe' ).name('Wireframe Only');
+  wireframeController.onChange( function ( value ) {
+    showWireframe = value;
+    updateGroupGeometry( group, group.children[1].geometry, showWireframe );
+    meshMaterial.wireframe = value;
+  });
+
+  const geometryController = gui.add( { selectedGeometry: selectedGeometry }, 'selectedGeometry' )
+    .options(['PlaneGeometry', 'CircleGeometry', 'RingGeometry', 'BoxGeometry', 'SphereGeometry', 'CylinderGeometry', 'ConeGeometry', 'TorusGeometry', 'TorusKnotGeometry'])
+    .name('Select Geometry');
+  geometryController.onChange( function ( value ) {
+    window.location.hash = value;
+    chooseFromHash( group );
+  });
 
   const scene = new THREE.Scene();
   scene.background = new THREE.Color( 0x444444 );
@@ -423,7 +439,7 @@
   geometry.setAttribute( 'position', new THREE.Float32BufferAttribute( [], 3 ) );
 
   const lineMaterial = new THREE.LineBasicMaterial( { color: 0xffffff, transparent: true, opacity: 0.5 } );
-  const meshMaterial = new THREE.MeshPhongMaterial( { color: 0x156289, emissive: 0x072534, side: 2, flatShading: true } );
+  const meshMaterial = new THREE.MeshPhongMaterial( { color: 0x156289, emissive: 0x072534, side: 2, flatShading: true, wireframe: false } );
 
   const lineSegments = new THREE.LineSegments( geometry, lineMaterial )
   group.add( lineSegments );
